force-app/main/default/objects/Account__x/fields/AccountSource__c.field-meta.xml
<CustomField>
    <fullName>AccountSource__c</fullName>
    <externalDeveloperName>AccountSource</externalDeveloperName>
    <label>Account Source</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>NMEG Website</fullName>
            </value>
            <value>
                <fullName>NMEG Facebook</fullName>
            </value>
            <value>
                <fullName>NMEG Publishers</fullName>
            </value>
            <value>
                <fullName>NMEG Official CallCenter</fullName>
                <label>NMEG Official Call Center</label>
            </value>
            <value>
                <fullName>NMEG Campaigns</fullName>
            </value>
            <value>
                <fullName>NMEG Events</fullName>
            </value>
            <value>
                <fullName>Dealer Digital Platform</fullName>
            </value>
            <value>
                <fullName>Dealer Mobile Message</fullName>
            </value>
            <value>
                <fullName>Dealer Showroom</fullName>
            </value>
            <value>
                <fullName>Dealer Event</fullName>
            </value>
            <value>
                <fullName>Dealer Call Center</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>