force-app/main/default/objects/Account__x/fields/Address_c__c.field-meta.xml
<CustomField>
    <fullName>Address_c__c</fullName>
    <externalDeveloperName>Address__c</externalDeveloperName>
    <label>Address</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>