force-app/main/default/objects/Account__x/fields/Age_Group_c__c.field-meta.xml
<CustomField>
    <fullName>Age_Group_c__c</fullName>
    <externalDeveloperName>Age_Group__c</externalDeveloperName>
    <label>Age Group</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Corp</fullName>
            </value>
            <value>
                <fullName>30 - 40</fullName>
            </value>
            <value>
                <fullName>60&lt;</fullName>
            </value>
            <value>
                <fullName>20 - 30</fullName>
            </value>
            <value>
                <fullName>40 - 50</fullName>
            </value>
            <value>
                <fullName>Refused</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>