force-app/main/default/objects/Account__x/fields/Area_c__c.field-meta.xml
<CustomField>
    <fullName>Area_c__c</fullName>
    <externalDeveloperName>Area__c</externalDeveloperName>
    <label>Area</label>
    <length>255</length>
    <type>Text</type>
</CustomField>