force-app/main/default/objects/Account__x/fields/Contact_Type_pc__c.field-meta.xml
<CustomField>
    <fullName>Contact_Type_pc__c</fullName>
    <externalDeveloperName>Contact_Type__pc</externalDeveloperName>
    <label>Contact Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Survey</fullName>
            </value>
            <value>
                <fullName>Non-Survey</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>