force-app/main/default/objects/Account__x/fields/ContactRole_pc__c.field-meta.xml
<CustomField>
    <fullName>ContactRole_pc__c</fullName>
    <externalDeveloperName>ContactRole__pc</externalDeveloperName>
    <label>Contact Role</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Branch Manager</fullName>
            </value>
            <value>
                <fullName>Salesman</fullName>
            </value>
            <value>
                <fullName>Dealer Manager</fullName>
            </value>
            <value>
                <fullName>Dealer CRM</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>