force-app/main/default/objects/Account__x/fields/Dealership_Logo_c__c.field-meta.xml
<CustomField>
    <fullName>Dealership_Logo_c__c</fullName>
    <externalDeveloperName>Dealership_Logo__c</externalDeveloperName>
    <label>Dealership Logo</label>
    <length>1300</length>
    <readOnlyProxy>true</readOnlyProxy>
    <type>LongTextArea</type>
</CustomField>