force-app/main/default/objects/Account__x/fields/DealershipCode_c__c.field-meta.xml
<CustomField>
    <fullName>DealershipCode_c__c</fullName>
    <externalDeveloperName>DealershipCode__c</externalDeveloperName>
    <label>Dealership Code</label>
    <length>8</length>
    <type>Text</type>
</CustomField>