force-app/main/default/objects/Account__x/fields/Existing_Account_Number_c__c.field-meta.xml
<CustomField>
    <fullName>Existing_Account_Number_c__c</fullName>
    <externalDeveloperName>Existing_Account_Number__c</externalDeveloperName>
    <label>Existing Account ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>