force-app/main/default/objects/Account__x/fields/Facility_c__c.field-meta.xml
<CustomField>
    <fullName>Facility_c__c</fullName>
    <externalDeveloperName>Facility__c</externalDeveloperName>
    <label>Facility</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>1S</fullName>
            </value>
            <value>
                <fullName>2S</fullName>
            </value>
            <value>
                <fullName>3S</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>