force-app/main/default/objects/Account__x/fields/Gender_c__c.field-meta.xml
<CustomField>
    <fullName>Gender_c__c</fullName>
    <externalDeveloperName>Gender__c</externalDeveloperName>
    <label>Gender</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Female</fullName>
            </value>
            <value>
                <fullName>Male</fullName>
            </value>
            <value>
                <fullName>Corp</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>