force-app/main/default/objects/Account__x/fields/Governorate_c__c.field-meta.xml
<CustomField>
    <fullName>Governorate_c__c</fullName>
    <externalDeveloperName>Governorate__c</externalDeveloperName>
    <label>Governorate</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Alex</fullName>
            </value>
            <value>
                <fullName>Cairo</fullName>
            </value>
            <value>
                <fullName>Canal Zone</fullName>
            </value>
            <value>
                <fullName>Delta</fullName>
            </value>
            <value>
                <fullName>Giza</fullName>
            </value>
            <value>
                <fullName>Red Sea</fullName>
            </value>
            <value>
                <fullName>Upper Egypt</fullName>
            </value>
            <value>
                <fullName>Helwan</fullName>
            </value>
            <value>
                <fullName>Dakahleya</fullName>
            </value>
            <value>
                <fullName>Menia</fullName>
            </value>
            <value>
                <fullName>Aswan</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>