force-app/main/default/objects/Account__x/fields/IsPersonAccount__c.field-meta.xml
<CustomField>
    <fullName>IsPersonAccount__c</fullName>
    <defaultValue>false</defaultValue>
    <externalDeveloperName>IsPersonAccount</externalDeveloperName>
    <label>Is Person Account</label>
    <readOnlyProxy>true</readOnlyProxy>
    <type>Checkbox</type>
</CustomField>