force-app/main/default/objects/Account__x/fields/MiddleName__c.field-meta.xml
<CustomField>
    <fullName>MiddleName__c</fullName>
    <externalDeveloperName>MiddleName</externalDeveloperName>
    <label>Middle Name</label>
    <length>40</length>
    <required>true</required>
    <type>Text</type>
</CustomField>