force-app/main/default/objects/Account__x/fields/National_Id_c__c.field-meta.xml
<CustomField>
    <fullName>National_Id_c__c</fullName>
    <externalDeveloperName>National_Id__c</externalDeveloperName>
    <label>National Id/Passport Number</label>
    <length>14</length>
    <type>Text</type>
</CustomField>