force-app/main/default/objects/Account__x/fields/Other_Occupation_c__c.field-meta.xml
<CustomField>
    <fullName>Other_Occupation_c__c</fullName>
    <externalDeveloperName>Other_Occupation__c</externalDeveloperName>
    <label>Other Occupation</label>
    <length>255</length>
    <type>Text</type>
</CustomField>