force-app/main/default/objects/Account__x/fields/PersonContactId__c.field-meta.xml
<CustomField>
    <fullName>PersonContactId__c</fullName>
    <externalDeveloperName>PersonContactId</externalDeveloperName>
    <label>Contact ID</label>
    <length>18</length>
    <readOnlyProxy>true</readOnlyProxy>
    <type>Text</type>
</CustomField>