force-app/main/default/objects/Account__x/fields/PersonDepartment__c.field-meta.xml
<CustomField>
    <fullName>PersonDepartment__c</fullName>
    <externalDeveloperName>PersonDepartment</externalDeveloperName>
    <label>Department</label>
    <length>80</length>
    <type>Text</type>
</CustomField>