force-app/main/default/objects/Account__x/fields/PersonEmail__c.field-meta.xml
<CustomField>
    <fullName>PersonEmail__c</fullName>
    <externalDeveloperName>PersonEmail</externalDeveloperName>
    <label>Email</label>
    <type>Email</type>
</CustomField>