force-app/main/default/objects/Account__x/fields/PersonEmailBouncedDate__c.field-meta.xml
<CustomField>
    <fullName>PersonEmailBouncedDate__c</fullName>
    <externalDeveloperName>PersonEmailBouncedDate</externalDeveloperName>
    <label>Email Bounced Date</label>
    <type>DateTime</type>
</CustomField>