force-app/main/default/objects/Account__x/fields/PersonEmailBouncedReason__c.field-meta.xml
<CustomField>
    <fullName>PersonEmailBouncedReason__c</fullName>
    <externalDeveloperName>PersonEmailBouncedReason</externalDeveloperName>
    <label>Email Bounced Reason</label>
    <length>255</length>
    <type>Text</type>
</CustomField>