force-app/main/default/objects/Account__x/fields/PersonIndividualId__c.field-meta.xml
<CustomField>
    <fullName>PersonIndividualId__c</fullName>
    <externalDeveloperName>PersonIndividualId</externalDeveloperName>
    <label>Individual ID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>