force-app/main/default/objects/Account__x/fields/PersonLastCURequestDate__c.field-meta.xml
<CustomField>
    <fullName>PersonLastCURequestDate__c</fullName>
    <externalDeveloperName>PersonLastCURequestDate</externalDeveloperName>
    <label>Last Stay-in-Touch Request Date</label>
    <readOnlyProxy>true</readOnlyProxy>
    <type>DateTime</type>
</CustomField>