force-app/main/default/objects/Account__x/fields/PersonLastCUUpdateDate__c.field-meta.xml
<CustomField>
    <fullName>PersonLastCUUpdateDate__c</fullName>
    <externalDeveloperName>PersonLastCUUpdateDate</externalDeveloperName>
    <label>Last Stay-in-Touch Save Date</label>
    <readOnlyProxy>true</readOnlyProxy>
    <type>DateTime</type>
</CustomField>