force-app/main/default/objects/Account__x/fields/PersonMailingAddress__c.field-meta.xml
<CustomField>
    <fullName>PersonMailingAddress__c</fullName>
    <externalDeveloperName>PersonMailingAddress</externalDeveloperName>
    <label>Mailing Address</label>
    <readOnlyProxy>true</readOnlyProxy>
    <type>TextArea</type>
</CustomField>