force-app/main/default/objects/Account__x/fields/PersonMailingCity__c.field-meta.xml
<CustomField>
    <fullName>PersonMailingCity__c</fullName>
    <externalDeveloperName>PersonMailingCity</externalDeveloperName>
    <label>Mailing City</label>
    <length>40</length>
    <type>Text</type>
</CustomField>