force-app/main/default/objects/Account__x/fields/PersonMailingCountry__c.field-meta.xml
<CustomField>
    <fullName>PersonMailingCountry__c</fullName>
    <externalDeveloperName>PersonMailingCountry</externalDeveloperName>
    <label>Mailing Country</label>
    <length>80</length>
    <type>Text</type>
</CustomField>