force-app/main/default/objects/Account__x/fields/PersonMailingLatitude__c.field-meta.xml
<CustomField>
    <fullName>PersonMailingLatitude__c</fullName>
    <externalDeveloperName>PersonMailingLatitude</externalDeveloperName>
    <label>Mailing Latitude</label>
    <precision>18</precision>
    <scale>15</scale>
    <type>Number</type>
</CustomField>