force-app/main/default/objects/Account__x/fields/PersonMailingLongitude__c.field-meta.xml
<CustomField>
    <fullName>PersonMailingLongitude__c</fullName>
    <externalDeveloperName>PersonMailingLongitude</externalDeveloperName>
    <label>Mailing Longitude</label>
    <precision>18</precision>
    <scale>15</scale>
    <type>Number</type>
</CustomField>