force-app/main/default/objects/Account__x/fields/PersonMailingPostalCode__c.field-meta.xml
<CustomField>
    <fullName>PersonMailingPostalCode__c</fullName>
    <externalDeveloperName>PersonMailingPostalCode</externalDeveloperName>
    <label>Mailing Zip/Postal Code</label>
    <length>20</length>
    <type>Text</type>
</CustomField>