force-app/main/default/objects/Account__x/fields/PersonMailingState__c.field-meta.xml
<CustomField>
    <fullName>PersonMailingState__c</fullName>
    <externalDeveloperName>PersonMailingState</externalDeveloperName>
    <label>Mailing State/Province</label>
    <length>80</length>
    <type>Text</type>
</CustomField>