force-app/main/default/objects/Account__x/fields/PersonMailingStreet__c.field-meta.xml
<CustomField>
    <fullName>PersonMailingStreet__c</fullName>
    <externalDeveloperName>PersonMailingStreet</externalDeveloperName>
    <label>Mailing Street</label>
    <type>TextArea</type>
</CustomField>