force-app/main/default/objects/Account__x/fields/PersonMobilePhone__c.field-meta.xml
<CustomField>
    <fullName>PersonMobilePhone__c</fullName>
    <externalDeveloperName>PersonMobilePhone</externalDeveloperName>
    <label>Mobile</label>
    <type>Phone</type>
</CustomField>