force-app/main/default/objects/Account__x/fields/PersonTitle__c.field-meta.xml
<CustomField>
    <fullName>PersonTitle__c</fullName>
    <externalDeveloperName>PersonTitle</externalDeveloperName>
    <label>Title</label>
    <length>80</length>
    <type>Text</type>
</CustomField>