force-app/main/default/objects/Account__x/fields/Showroom_City_c__c.field-meta.xml
<CustomField>
    <fullName>Showroom_City_c__c</fullName>
    <externalDeveloperName>Showroom_City__c</externalDeveloperName>
    <label>Showroom City</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Alex</fullName>
            </value>
            <value>
                <fullName>Assiout</fullName>
            </value>
            <value>
                <fullName>Aswan</fullName>
            </value>
            <value>
                <fullName>Bany Suef</fullName>
            </value>
            <value>
                <fullName>Cairo</fullName>
            </value>
            <value>
                <fullName>Giza</fullName>
            </value>
            <value>
                <fullName>Hurghada</fullName>
            </value>
            <value>
                <fullName>Ismaelya</fullName>
            </value>
            <value>
                <fullName>Luxor</fullName>
            </value>
            <value>
                <fullName>Mansoura</fullName>
            </value>
            <value>
                <fullName>Menya</fullName>
            </value>
            <value>
                <fullName>Monofya</fullName>
            </value>
            <value>
                <fullName>Qena</fullName>
            </value>
            <value>
                <fullName>Suez</fullName>
            </value>
            <value>
                <fullName>Tanta</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>