force-app/main/default/objects/Account__x/fields/ShowroomGovernorate_c__c.field-meta.xml
<CustomField>
    <fullName>ShowroomGovernorate_c__c</fullName>
    <externalDeveloperName>ShowroomGovernorate__c</externalDeveloperName>
    <label>Showroom Governorate</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Alex</fullName>
            </value>
            <value>
                <fullName>Cairo</fullName>
            </value>
            <value>
                <fullName>Canal Zone</fullName>
            </value>
            <value>
                <fullName>Delta</fullName>
            </value>
            <value>
                <fullName>Giza</fullName>
            </value>
            <value>
                <fullName>Red Sea</fullName>
            </value>
            <value>
                <fullName>Upper Egypt</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>