force-app/main/default/objects/Account__x/fields/ShowroomLocation_c__c.field-meta.xml
<CustomField>
    <fullName>ShowroomLocation_c__c</fullName>
    <externalDeveloperName>ShowroomLocation__c</externalDeveloperName>
    <label>Showroom Location</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Abasya</fullName>
            </value>
            <value>
                <fullName>Abis</fullName>
            </value>
            <value>
                <fullName>Abu Rawash</fullName>
            </value>
            <value>
                <fullName>Alex-Cairo Rd</fullName>
            </value>
            <value>
                <fullName>Assiout</fullName>
            </value>
            <value>
                <fullName>Aswan</fullName>
            </value>
            <value>
                <fullName>Bany Suef</fullName>
            </value>
            <value>
                <fullName>Dokki</fullName>
            </value>
            <value>
                <fullName>El Hadra</fullName>
            </value>
            <value>
                <fullName>Gesr El Suez</fullName>
            </value>
            <value>
                <fullName>Gleem</fullName>
            </value>
            <value>
                <fullName>Heliopolis-Airport Rd</fullName>
            </value>
            <value>
                <fullName>Heliopolis-Hegaz</fullName>
            </value>
            <value>
                <fullName>Horya Road</fullName>
            </value>
            <value>
                <fullName>Hurghada</fullName>
            </value>
            <value>
                <fullName>Imbaba</fullName>
            </value>
            <value>
                <fullName>Ismaelya</fullName>
            </value>
            <value>
                <fullName>Janaklees</fullName>
            </value>
            <value>
                <fullName>Katameya</fullName>
            </value>
            <value>
                <fullName>Luxor</fullName>
            </value>
            <value>
                <fullName>Maadi</fullName>
            </value>
            <value>
                <fullName>Mansoura 3aref</fullName>
            </value>
            <value>
                <fullName>Mansoura Mahla</fullName>
            </value>
            <value>
                <fullName>Menya</fullName>
            </value>
            <value>
                <fullName>Mohandseen</fullName>
            </value>
            <value>
                <fullName>Nasr City</fullName>
            </value>
            <value>
                <fullName>New Cairo</fullName>
            </value>
            <value>
                <fullName>Nozha</fullName>
            </value>
            <value>
                <fullName>Qalube</fullName>
            </value>
            <value>
                <fullName>Qena</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>