force-app/main/default/objects/Account__x/fields/smagicinteract_SMSOptOut_pc__c.field-meta.xml
<CustomField>
    <fullName>smagicinteract_SMSOptOut_pc__c</fullName>
    <defaultValue>false</defaultValue>
    <externalDeveloperName>smagicinteract__SMSOptOut__pc</externalDeveloperName>
    <label>SMS Opt Out</label>
    <type>Checkbox</type>
</CustomField>