force-app/main/default/objects/Account__x/fields/Suffix__c.field-meta.xml
<CustomField>
    <fullName>Suffix__c</fullName>
    <externalDeveloperName>Suffix</externalDeveloperName>
    <label>Suffix</label>
    <length>40</length>
    <required>true</required>
    <type>Text</type>
</CustomField>