force-app/main/default/objects/Account__x/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <externalDeveloperName>Type</externalDeveloperName>
    <label>Account Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Partner</fullName>
            </value>
            <value>
                <fullName>Individual</fullName>
            </value>
            <value>
                <fullName>Corporate</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>